Update E2ETests