@@ -18,24 +18,35 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class BasicConstraintTests extends ProceduralTestingSetup {
-  private ConstraintInvocationId fruitTresholdConstraintId;
+  private ConstraintInvocationId fruitThresholdConstraintId;
+  private ConstraintInvocationId noMessageConstraintId;
 
   @BeforeEach
   void localBeforeEach() throws IOException {
     try (final var gateway = new GatewayRequests(playwright)) {
-      final int fruitTresholdConstraintJarId = gateway.uploadJarFile("build/libs/FruitThresholdConstraint.jar");
-      // Add Scheduling Procedure
-      fruitTresholdConstraintId = hasura.createConstraintSpecProcedure(
-          "Test Constraint Procedure 1",
-          fruitTresholdConstraintJarId,
+      final int fruitThresholdConstraintJarId = gateway.uploadJarFile("build/libs/FruitThresholdConstraint.jar");
+      final int noMessageConstraintJarId = gateway.uploadJarFile("build/libs/NoMessageConstraint.jar");
+      // Add Constraint Procedures
+      fruitThresholdConstraintId = hasura.createConstraintSpecProcedure(
+          "Fruit Threshold Constraint",
+          fruitThresholdConstraintJarId,
           planId
       );
+      noMessageConstraintId = hasura.createConstraintSpecProcedure(
+          "No Message Constraint",
+          noMessageConstraintJarId,
+          planId
+      );
+
+      // Disable the noMessageConstraint by default
+      hasura.updatePlanConstraintSpecEnabled(noMessageConstraintId.invocationId(), false);
     }
   }
 
   @AfterEach
   void localAfterEach() throws IOException {
-    hasura.deleteConstraint(fruitTresholdConstraintId.id());
+    hasura.deleteConstraint(fruitThresholdConstraintId.id());
+    hasura.deleteConstraint(noMessageConstraintId.id());
   }
 
   /**
@@ -47,8 +58,15 @@ public class BasicConstraintTests extends ProceduralTestingSetup {
     hasura.awaitSimulation(planId);
     final var resp = hasura.checkConstraints(planId);
     assertEquals(1, resp.constraintsRun().size());
-    assertEquals(1, resp.constraintsRun().getFirst().errors().size());
-    assertTrue(resp.constraintsRun().getFirst().errors().getFirst().message().contains("gov.nasa.jpl.aerie.merlin.protocol.types.InstantiationException: Invalid arguments for input type \"FruitThresholdConstraint\": extraneous arguments: [], unconstructable arguments: [], missing arguments: [MissingArgument[parameterName=upperBound, schema=IntSchema[]]], valid arguments: [ValidArgument[parameterName=lowerBound, serializedValue=NumericValue[value=5]]]"));
+    final var constraint =  resp.constraintsRun().getFirst();
+    assertEquals(1, constraint.errors().size());
+    assertTrue(constraint.errors().getFirst().message().contains(
+        "gov.nasa.jpl.aerie.merlin.protocol.types.InstantiationException: Invalid arguments for input type "
+        + "\"FruitThresholdConstraint\": "
+        + "extraneous arguments: [], "
+        + "unconstructable arguments: [], "
+        + "missing arguments: [MissingArgument[parameterName=upperBound, schema=IntSchema[]]], "
+        + "valid arguments: [ValidArgument[parameterName=lowerBound, serializedValue=NumericValue[value=5]]]"));
   }
 
   /**
@@ -57,7 +75,7 @@ public class BasicConstraintTests extends ProceduralTestingSetup {
   @Test
   void executeConstraintRunWithArguments() throws IOException {
     final var args = Json.createObjectBuilder().add("upperBound", 10).build();
-    hasura.updateConstraintArguments(fruitTresholdConstraintId.invocationId(), args);
+    hasura.updateConstraintArguments(fruitThresholdConstraintId.invocationId(), args);
     hasura.awaitSimulation(planId);
     final var resp = hasura.checkConstraints(planId);
     assertTrue(resp.constraintsRun().getFirst().success());
@@ -69,19 +87,54 @@ public class BasicConstraintTests extends ProceduralTestingSetup {
   }
 
   /**
+   * Test that constraints with a violation message include said violation message.
+   */
+  @Test
+  void messageReturnedIfPresent() throws IOException {
+    // Enable the NoMessageConstraint
+    hasura.updatePlanConstraintSpecEnabled(noMessageConstraintId.invocationId(), true);
+
+    // Assign args to the constraints
+    final var args = Json.createObjectBuilder().add("upperBound", 10).build();
+    hasura.updateConstraintArguments(fruitThresholdConstraintId.invocationId(), args);
+    hasura.updateConstraintArguments(noMessageConstraintId.invocationId(), args);
+
+    // Get Constraint Results
+    hasura.awaitSimulation(planId);
+    final var resp = hasura.checkConstraints(planId);
+
+    assertEquals(2, resp.constraintsRun().size());
+
+    final var firstConstraint = resp.constraintsRun().getFirst();
+    assertEquals(fruitThresholdConstraintId.invocationId(), firstConstraint.constraintInvocationId());
+    assertTrue(firstConstraint.success());
+    assertEquals(1, firstConstraint.result().get().violations().size());
+    final var firstConstraintViolation = firstConstraint.result().get().violations().getFirst();
+    assertTrue(firstConstraintViolation.message().isPresent());
+    assertEquals("Fruit count is outside of boundaries: [5, 10]", firstConstraintViolation.message().get());
+
+    final var secondConstraint = resp.constraintsRun().getLast();
+    assertEquals(noMessageConstraintId.invocationId(), secondConstraint.constraintInvocationId());
+    assertTrue(secondConstraint.success());
+    assertEquals(1, secondConstraint.result().get().violations().size());
+    final var secondConstraintViolation = secondConstraint.result().get().violations().getFirst();
+    assertTrue(secondConstraintViolation.message().isEmpty());
+  }
+
+  /**
    * Queries the procedural constraints arguments.
    */
   @Test
   void effectiveArgumentsQuery() throws IOException {
     final var effectiveArgs = hasura.getEffectiveProceduralConstraintsArgumentsBulk(
-        List.of(Pair.of(fruitTresholdConstraintId.id(), Json.createObjectBuilder().add("upperBound", 10).build())));
+        List.of(Pair.of(fruitThresholdConstraintId.id(), Json.createObjectBuilder().add("upperBound", 10).build())));
     assertEquals(1, effectiveArgs.size());
-    assertTrue(effectiveArgs.get(0).success());
-    assertTrue(effectiveArgs.get(0).arguments().isPresent());
-    assertTrue(effectiveArgs.get(0).errors().isEmpty());
+    assertTrue(effectiveArgs.getFirst().success());
+    assertTrue(effectiveArgs.getFirst().arguments().isPresent());
+    assertTrue(effectiveArgs.getFirst().errors().isEmpty());
 
     // Check returned Arguments
-    final var args = effectiveArgs.get(0).arguments().get();
+    final var args = effectiveArgs.getFirst().arguments().get();
     assertEquals(2, args.size());
     assertEquals(10, args.getInt("upperBound"));
     assertEquals(5, args.getInt("lowerBound"));
